--- a/index.html
+++ b/index.html
@@ -19,5 +19,10 @@
                 <h3>My home</h3>
             </a>
         </div>
+        <div>
+            <a href="exp.html">
+                <h3>My experiances</h3>
+            </a>
+        </div>
     </body>
 </html>
