--- a/about.html
+++ b/about.html
@@ -3,15 +3,17 @@
     <head>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
-    <body class="aboutBackground">
-        
-        <h2>Name : Shreyas Sinha<br>
-        Age : 14<br>
-        grade : 8<br></h2>
+    <body >
+        <div class="aboutBackground">
+            <h2>Name : Shreyas Sinha<br>
+                Age : 14<br>
+                grade : 8<br></h2>
+        </div>
+        <div>
         <p>
             <a href="index.html">
                 Back
             </a>
-        </p>
+        </p></div>
     </body>
 </html>
