--- a/home.html
+++ b/home.html
@@ -3,13 +3,19 @@
     <head>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
-    <body class="homeBackground">
-        pickup point : Adarsh Palm Retreat<br>
+    <body >
+        <div class="homeBackground">
+            pickup point : Adarsh Palm Retreat<br>
         droppoint : Adarsh Palm Retreat
-        <p>
-            <a href="index.html">
-                Back
-            </a>
-        </p>
+        </div>
+        
+        <div>
+            <p>
+                <a href="index.html">
+                    Back
+                </a>
+            </p>
+        </div>
+        
     </body>
 </html>
