--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
             <h1>My school info</h1>
 
         </div>
-        <div>
+        <div class="grid">
             <a href="about.html">
                 <h3>My info</h3>
             </a>
             
         </div>
-        <div >
+        <div class="grid">
             <a href="home.html">
                 <h3>My home</h3>
             </a>
         </div>
-        <div>
+        <div class="grid">
             <a href="exp.html">
                 <h3>My experiances</h3>
             </a>
