--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
     </head>
     <body>
         <div class="header">
-            <h1>My school info</h1>
+            <h1>My School Info</h1>
 
         </div>
         <div class="grid">
             <a href="about.html">
-                <h3>My info</h3>
+                <h3>My Info</h3>
             </a>
             
         </div>
         <div class="grid">
             <a href="home.html">
-                <h3>My home</h3>
+                <h3>My Home</h3>
             </a>
         </div>
         <div class="grid">
             <a href="exp.html">
-                <h3>My experiances</h3>
+                <h3>My Experiances</h3>
             </a>
         </div>
     </body>
